--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Networking Tools</title>
+    <style>
+      div#menu > a {display: block;}
+    </style>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
+    <div id="menu">
+      <a href="git-tool/git-tool.html">Git Tool</a>
+      <a href="gitlab-tool/gitlab-tool.html">GitLab Tool</a>
+    </div>
     <script>
       // You can also require other files to run in this process
+      window.$ = window.jQuery = require('jquery')
       require('./renderer.js')
     </script>
   </body>
