--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -2,27 +2,42 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Git Tool</title>
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     <a id="back" href="#">Back</a>
-    <div id="tool">
-      <div>Select Root Folder</div>
-      <input id="rootFolder" type="file" webkitdirectory>
-      <div>Select Folder(s)</div>
-      <select id="folders" multiple>
+
+    <div class="form-group">
+      <label>Select root folder</label>
+      <input id="rootFolder" type="file" class="form-control" webkitdirectory>
+    </div>      
+    <div class="form-group">
+      <label>Select Git folder(s)</label>
+      <select id="folders" class="form-control" multiple>
       </select>
-      <div>Command(s) to execute</div>
-      <textarea id="commands" style="display: block">status</textarea>
-      <button id="run">Run...</button>
-      <div>Output</div>
-      <button id="clear">Clear</button>
+    </div>      
+    <div class="form-group">
+      <label>Git command(s)</label>
+      <textarea id="commands" class="form-control">status</textarea>
+    </div>
+    <button id="run" class="btn btn-primary">Run...</button>
+    <div class="form-group">
+      <label>Output</label>
+      <div class="progress">
+        <div id="progress" class="progress-bar" style="width:70%">
+        </div>
+      </div>
       <div id="log"></div>
     </div>
+    <button id="clear" class="btn btn-warning">Clear</button>
 
     <script>
       // You can also require other files to run in this process
       window.$ = window.jQuery = require('jquery')
+      require('popper.js')
+      require('bootstrap')
       require('./git-tool.js')
     </script>
   </body>
