--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -22,16 +22,17 @@
       <label>Git command(s)</label>
       <textarea id="commands" class="form-control">status</textarea>
     </div>
-    <button id="run" class="btn btn-primary">Run...</button>
+    <div class="form-group">
+      <button id="run" class="btn btn-primary">Run...</button>
+      <div id="spinner" class="spinner-border text-primary float-right d-none">
+          <span class="sr-only">Running...</span>
+      </div>
+    </div>
     <div class="form-group">
       <label>Output</label>
-      <div class="progress">
-        <div id="progress" class="progress-bar" style="width:70%">
-        </div>
-      </div>
+      <button id="clear" class="btn btn-warning float-right">Clear</button>
       <div id="log"></div>
     </div>
-    <button id="clear" class="btn btn-warning">Clear</button>
 
     <script>
       // You can also require other files to run in this process
