--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -14,7 +14,7 @@
       <input id="rootFolder" type="file" class="form-control" webkitdirectory>
     </div>      
     <div class="form-group">
-      <label>Select Git folder(s)</label>
+      <label>Select Git repo(s)</label>
       <select id="folders" class="form-control" multiple>
       </select>
     </div>      
