--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
-    <a id="back" href="#">Back</a>
-
+    <a id="back" href="#" class="btn btn-secondary">Back</a>
     <div class="form-group">
       <label>Select root folder</label>
       <input id="rootFolder" type="file" class="form-control" webkitdirectory>
@@ -33,7 +32,6 @@
       <button id="clear" class="btn btn-warning float-right">Clear</button>
       <div id="log"></div>
     </div>
-
     <script>
       // You can also require other files to run in this process
       window.$ = window.jQuery = require('jquery')
