--- a/gitlab-tool/gitlab-tool.html
+++ b/gitlab-tool/gitlab-tool.html
@@ -7,8 +7,63 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
+    <div class="form-group">
       <a id="back" href="#" class="btn btn-secondary">Back</a>
-      <script>
+    </div>
+    <div class="form-group">
+      <label>GitLab URL</label>
+      <input id="url" type="url" class="form-control" value="https://gitlab.com">
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Token</label>
+      <input id="token" type="password" class="form-control">
+      </select>
+    </div>
+    <div class="form-group">
+      <button id="query" class="btn btn-primary">Query...</button>
+      <div id="spinner" class="spinner-border text-primary float-right d-none">
+          <span class="sr-only">Running...</span>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-primary active">
+          <input type="radio" name="options" id="viewProjects" autocomplete="off" checked>Projects
+        </label>
+        <label class="btn btn-primary">
+          <input type="radio" name="options" id="viewMilestones" autocomplete="off" checked>Milestones
+        </label>
+      </div>
+    </div>
+    <table id="projects" class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Name</th>
+          <th scope="col">Namespace</th>
+          <th scope="col">HTTP URL</th>
+          <th scope="col">SSH URL</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+    <table id="milestones" class="table d-none">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Title</th>
+          <th scope="col">Project</th>
+          <th scope="col">State</th>
+          <th scope="col">Due Date</th>
+          <th scope="col">Start Date</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+    <script>
       // You can also require other files to run in this process
       window.$ = window.jQuery = require('jquery')
       require('popper.js')
