--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -9,21 +9,21 @@
   <body>
     <div class="form-group">
       <a id="back" href="#" class="btn btn-secondary">Back</a>
-    </div>      
+    </div>
     <div class="form-group">
       <div class="input-group">
           <div class="custom-file">
             <input id="rootFolder" type="file" class="custom-file-input" webkitdirectory>
             <label class="custom-file-label" for="rootFolder">Pick root folder</label>
         </div>
-    </div>      
+    </div>
     <div class="form-group">
-      <label>Select Git repo(s)</label>
+      <label for="folders">Select Git repo(s)</label>
       <select id="folders" class="form-control" multiple>
       </select>
     </div>
     <div class="form-group">
-      <label>Git command(s)</label>
+      <label for="commands">Git command(s)</label>
       <textarea id="commands" class="form-control">status</textarea>
     </div>
     <div class="form-group">
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label>Output</label>
+      <label for="log">Output</label>
       <button id="clear" class="btn btn-warning float-right">Clear</button>
       <div id="log"></div>
     </div>
