persist input to localStorage

--- a/gitlab-tool/gitlab-tool.html
+++ b/gitlab-tool/gitlab-tool.html
@@ -11,12 +11,12 @@
       <a id="back" href="#" class="btn btn-secondary">Back</a>
     </div>
     <div class="form-group">
-      <label>GitLab URL</label>
+      <label for="url">GitLab URL</label>
       <input id="url" type="url" class="form-control" value="https://gitlab.com">
       </select>
     </div>
     <div class="form-group">
-      <label>Token</label>
+      <label for="token">Token</label>
       <input id="token" type="password" class="form-control">
       </select>
     </div>
