--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
-    <div id="menu" class="list-group">
-      <a href="git-tool/git-tool.html" class="list-group-item list-group-item-action">Git Tool</a>
-      <a href="gitlab-tool/gitlab-tool.html" class="list-group-item list-group-item-action">GitLab Tool</a>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm">
+          <a href="git-tool/git-tool.html" class="list-group-item list-group-item-action">Git Tool</a>
+          <a href="gitlab-tool/gitlab-tool.html" class="list-group-item list-group-item-action">GitLab Tool</a>
+        </div>
+      </div>
     </div>
     <script>
       // You can also require other files to run in this process
