--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -7,35 +7,41 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
-    <div class="form-group">
-      <a id="back" href="#" class="btn btn-secondary">Back</a>
-    </div>
-    <div class="form-group">
-      <div class="input-group">
-          <div class="custom-file">
-            <input id="rootFolder" type="file" class="custom-file-input" webkitdirectory>
-            <label class="custom-file-label" for="rootFolder">Pick root folder</label>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm">
+          <div class="form-group">
+            <a id="back" href="#" class="btn btn-secondary">Back</a>
+          </div>
+          <div class="form-group">
+            <div class="input-group">
+                <div class="custom-file">
+                  <input id="rootFolder" type="file" class="custom-file-input" webkitdirectory>
+                  <label class="custom-file-label" for="rootFolder">Pick root folder</label>
+              </div>
+          </div>
+          <div class="form-group">
+            <label for="folders">Select Git repo(s)</label>
+            <select id="folders" class="form-control" multiple>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="commands">Git command(s)</label>
+            <textarea id="commands" class="form-control">status</textarea>
+          </div>
+          <div class="form-group">
+            <button id="run" class="btn btn-primary">Run...</button>
+            <div id="spinner" class="spinner-border text-primary float-right d-none">
+                <span class="sr-only">Running...</span>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="log">Output</label>
+            <button id="clear" class="btn btn-warning float-right">Clear</button>
+            <div id="log"></div>
+          </div>
         </div>
-    </div>
-    <div class="form-group">
-      <label for="folders">Select Git repo(s)</label>
-      <select id="folders" class="form-control" multiple>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="commands">Git command(s)</label>
-      <textarea id="commands" class="form-control">status</textarea>
-    </div>
-    <div class="form-group">
-      <button id="run" class="btn btn-primary">Run...</button>
-      <div id="spinner" class="spinner-border text-primary float-right d-none">
-          <span class="sr-only">Running...</span>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="log">Output</label>
-      <button id="clear" class="btn btn-warning float-right">Clear</button>
-      <div id="log"></div>
     </div>
     <script>
       // You can also require other files to run in this process
