--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm">
-          <a href="git-tool/git-tool.html" class="list-group-item list-group-item-action">Git Tool</a>
-          <a href="gitlab-tool/gitlab-tool.html" class="list-group-item list-group-item-action">GitLab Tool</a>
+          <a id="git-tool" href="#" class="list-group-item list-group-item-action">Git Tool</a>
+          <a id="gitlab-tool" href="#" class="list-group-item list-group-item-action">GitLab Tool</a>
         </div>
       </div>
     </div>
     <script>
-      // You can also require other files to run in this process
       window.$ = window.jQuery = require('jquery')
       require('./renderer.js')
       require('popper.js')
