persist output to localStorage

--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -33,9 +33,9 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="log">Output</label>
             <button id="clear" class="btn btn-warning float-right">Clear</button>
-            <div id="log"></div>
+            <label for="log">Output</label>
+            <pre id="log"></pre>
           </div>
         </div>
       </div>
