--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -11,11 +11,10 @@
       <div class="row">
         <div class="col-sm">
           <div class="form-group">
-            <div class="input-group">
-                <div class="custom-file">
-                  <input id="rootFolder" type="file" class="custom-file-input" webkitdirectory>
-                  <label class="custom-file-label" for="rootFolder">Pick root folder</label>
-              </div>
+            <div class="custom-file">
+              <input id="rootFolder" type="file" class="custom-file-input" webkitdirectory>
+              <label class="custom-file-label" for="rootFolder">Pick root folder</label>
+            </div>
           </div>
           <div class="form-group">
             <label for="folders">Select Git repo(s)</label>
@@ -27,7 +26,7 @@
             <textarea id="commands" class="form-control">status</textarea>
           </div>
           <div class="form-group">
-            <button id="run" class="btn btn-primary">Run...</button>
+            <button id="run" class="btn btn-primary">Run</button>
             <div id="spinner" class="spinner-border text-primary float-right d-none">
                 <span class="sr-only">Running...</span>
             </div>
