remove ellipsis from button text

--- a/gitlab-tool/gitlab-tool.html
+++ b/gitlab-tool/gitlab-tool.html
@@ -21,7 +21,7 @@
             </select>
           </div>
           <div class="form-group">
-            <button id="query" class="btn btn-primary">Query...</button>
+            <button id="query" class="btn btn-primary">Query</button>
             <div id="spinner" class="spinner-border text-primary float-right d-none">
                 <span class="sr-only">Running...</span>
             </div>
