--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -11,6 +11,7 @@
       <div class="row">
         <div class="col-sm">
           <div class="form-group">
+            <label for="folders">Select root folder</label>
             <div class="custom-file">
               <input id="rootFolder" type="file" class="custom-file-input" webkitdirectory>
               <label class="custom-file-label" for="rootFolder">Pick root folder</label>
@@ -32,7 +33,7 @@
             </div>
           </div>
           <div class="form-group">
-            <button id="clear" class="btn btn-warning float-right">Clear</button>
+            <button id="clear" class="btn btn-secondary float-right">Clear</button>
             <label for="log">Output</label>
             <pre id="log"></pre>
           </div>
