--- a/gitlab-tool/gitlab-tool.html
+++ b/gitlab-tool/gitlab-tool.html
@@ -28,11 +28,11 @@
           </div>
           <div class="form-group">
             <div class="btn-group btn-group-toggle" data-toggle="buttons">
-              <label class="btn btn-primary active">
-                <input type="radio" name="options" id="viewProjects" autocomplete="off" checked>Projects
+              <label class="btn btn-secondary active">
+                <input type="radio" name="options" id="viewProjects" checked>Projects
               </label>
-              <label class="btn btn-primary">
-                <input type="radio" name="options" id="viewMilestones" autocomplete="off" checked>Milestones
+              <label class="btn btn-secondary">
+                <input type="radio" name="options" id="viewMilestones">Milestones
               </label>
             </div>
           </div>
