--- a/git-tool/git-tool.html
+++ b/git-tool/git-tool.html
@@ -27,10 +27,10 @@
             <textarea id="commands" class="form-control">status</textarea>
           </div>
           <div class="form-group">
-            <button id="run" class="btn btn-primary">Run</button>
-            <div id="spinner" class="spinner-border text-primary float-right d-none">
-                <span class="sr-only">Running...</span>
-            </div>
+            <button id="run" class="btn btn-primary">Run
+              <span id="spinner" class="spinner-border spinner-border-sm d-none">
+              </span>
+            </button>
           </div>
           <div class="form-group">
             <button id="clear" class="btn btn-secondary float-right">Clear</button>
