--- a/gitlab-tool/gitlab-tool.html
+++ b/gitlab-tool/gitlab-tool.html
@@ -21,10 +21,10 @@
             </select>
           </div>
           <div class="form-group">
-            <button id="query" class="btn btn-primary">Query</button>
-            <div id="spinner" class="spinner-border text-primary float-right d-none">
-                <span class="sr-only">Running...</span>
-            </div>
+            <button id="query" class="btn btn-primary">Query
+              <span id="spinner" class="spinner-border spinner-border-sm d-none">
+              </span>
+            </button>
           </div>
           <div class="form-group">
             <div class="btn-group btn-group-toggle" data-toggle="buttons">
