--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <script>
       window.$ = window.jQuery = require('jquery')
-      require('./renderer.js')
+      require('./dist/renderer.js')
       require('popper.js')
       require('bootstrap')
     </script>
