--- a/src/gitlab-tool/gitlab-tool.html
+++ b/src/gitlab-tool/gitlab-tool.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GitLab Tool</title>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm">
           <div class="form-group">
-            <label for="url">GitLab URL</label>
-            <input id="url" type="url" class="form-control" value="https://gitlab.com">
+            <label for="host">GitLab Host</label>
+            <input id="host" type="url" class="form-control" value="https://gitlab.com">
             </select>
           </div>
           <div class="form-group">
