move index.html

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Networking Tools</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
   </head>
   <body>
     <div class="container-fluid">
@@ -17,7 +17,7 @@
     </div>
     <script>
       window.$ = window.jQuery = require('jquery')
-      require('./dist/renderer.js')
+      require('./renderer.js')
       require('popper.js')
       require('bootstrap')
     </script>
