--- a/src/gitlab-tool/gitlab-tool.html
+++ b/src/gitlab-tool/gitlab-tool.html
@@ -1,77 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GitLab Tool</title>
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
-  </head>
-  <body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm">
-          <div class="form-group">
-            <label for="host">GitLab Host</label>
-            <input id="host" type="url" class="form-control" value="https://gitlab.com">
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="token">Token</label>
-            <input id="token" type="password" class="form-control">
-            </select>
-          </div>
-          <div class="form-group">
-            <button id="query" class="btn btn-primary">Query
-              <span id="spinner" class="spinner-border spinner-border-sm d-none">
-              </span>
-            </button>
-          </div>
-          <div class="form-group">
-            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-              <label class="btn btn-secondary active">
-                <input type="radio" name="options" id="viewProjects" checked>Projects
-              </label>
-              <label class="btn btn-secondary">
-                <input type="radio" name="options" id="viewMilestones">Milestones
-              </label>
-            </div>
-          </div>
-          <table id="projects" class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Namespace</th>
-                <th scope="col">HTTP URL</th>
-                <th scope="col">SSH URL</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-          <table id="milestones" class="table d-none">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Title</th>
-                <th scope="col">Project</th>
-                <th scope="col">State</th>
-                <th scope="col">Due Date</th>
-                <th scope="col">Start Date</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>GitLab Tool</title>
+  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12 col-lg-4">
+        <div class="form-group">
+          <label for="host">GitLab Host</label>
+          <input id="host" type="url" class="form-control" value="https://gitlab.com">
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="token">Token</label>
+          <input id="token" type="password" class="form-control">
+          </select>
+        </div>
+        <div class="form-group">
+          <button id="query" class="btn btn-primary">Query
+            <span id="spinner" class="spinner-border spinner-border-sm d-none">
+            </span>
+          </button>
         </div>
       </div>
+      <div class="col-sm-12 col-lg-8">
+        <div class="form-group">
+          <div class="btn-group btn-group-toggle" data-toggle="buttons">
+            <label class="btn btn-secondary active">
+              <input type="radio" name="options" id="viewProjects" checked>Projects
+            </label>
+            <label class="btn btn-secondary">
+              <input type="radio" name="options" id="viewMilestones">Milestones
+            </label>
+          </div>
+        </div>
+        <table id="projects" class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Name</th>
+              <th scope="col">Namespace</th>
+              <th scope="col">HTTP URL</th>
+              <th scope="col">SSH URL</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+        <table id="milestones" class="table d-none">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Title</th>
+              <th scope="col">Project</th>
+              <th scope="col">State</th>
+              <th scope="col">Due Date</th>
+              <th scope="col">Start Date</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
     </div>
-    <script>
-      // You can also require other files to run in this process
-      window.$ = window.jQuery = require('jquery')
-      require('popper.js')
-      require('bootstrap')
-      require('./gitlab-tool.js')
-    </script>
-  </body>
+  </div>
+  <script>
+    // You can also require other files to run in this process
+    window.$ = window.jQuery = require('jquery')
+    require('popper.js')
+    require('bootstrap')
+    require('./gitlab-tool.js')
+  </script>
+</body>
+
 </html>
