--- a/src/git-tool/git-tool.html
+++ b/src/git-tool/git-tool.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row vh-100">
+      <div class="row">
         <div class="col-sm-12 col-lg-5">
           <div class="form-group">
             <label for="folders">Select root folder</label>
