use codemirror to edit git commands

--- a/src/git-tool/git-tool.html
+++ b/src/git-tool/git-tool.html
@@ -6,6 +6,7 @@
     <title>Git Tool</title>
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../../node_modules/xterm/dist/xterm.css" />
+    <link rel="stylesheet"href="../../node_modules/codemirror/lib/codemirror.css"
   </head>
   <body>
     <div class="container-fluid">
