--- a/src/git-tool/git-tool.html
+++ b/src/git-tool/git-tool.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Git Tool</title>
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../../node_modules/xterm/dist/xterm.css" />
-    <link rel="stylesheet"href="../../node_modules/codemirror/lib/codemirror.css"
+    <link rel="stylesheet" href="../../node_modules/xterm/dist/xterm.css">
+    <link rel="stylesheet"href="../../node_modules/codemirror/lib/codemirror.css">
   </head>
   <body>
     <div class="container-fluid">
