--- a/src/gitlab-tool/gitlab-tool.html
+++ b/src/gitlab-tool/gitlab-tool.html
@@ -11,25 +11,23 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-12 col-lg-4">
+      <div class="col">
         <div class="form-group">
           <label for="host">GitLab Host</label>
-          <input id="host" type="url" class="form-control" value="https://gitlab.com">
+          <input id="host" data-bind="value: host" type="url" class="form-control" value="https://gitlab.com">
           </select>
         </div>
         <div class="form-group">
           <label for="token">Token</label>
-          <input id="token" type="password" class="form-control">
+          <input id="token" data-bind="value: token" type="password" class="form-control">
           </select>
         </div>
         <div class="form-group">
-          <button id="query" class="btn btn-primary">Query
+          <button id="query" data-bind="click: query" class="btn btn-primary">Query
             <span id="spinner" class="spinner-border spinner-border-sm d-none">
             </span>
           </button>
         </div>
-      </div>
-      <div class="col-sm-12 col-lg-8">
         <div class="form-group">
           <div class="btn-group btn-group-toggle" data-toggle="buttons">
             <label class="btn btn-secondary active">
@@ -50,7 +48,12 @@
               <th scope="col">SSH URL</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody data-bind="foreach: projects">
+            <td data-bind="text: id"></td>
+            <td data-bind="text: name"></td>
+            <td data-bind="text: namespace"></td>
+            <td data-bind="text: httpUrl"></td>
+            <td data-bind="text: sshUrl"></td>
           </tbody>
         </table>
         <table id="milestones" class="table d-none">
@@ -64,7 +67,13 @@
               <th scope="col">Start Date</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody data-bind="foreach: milestones">
+            <td data-bind="text: id"></td>
+            <td data-bind="text: title"></td>
+            <td data-bind="text: projectName"></td>
+            <td data-bind="text: state"></td>
+            <td data-bind="text: dueDate"></td>
+            <td data-bind="text: startDate"></td>
           </tbody>
         </table>
       </div>
