bind spinner to view model

--- a/src/gitlab-tool/gitlab-tool.html
+++ b/src/gitlab-tool/gitlab-tool.html
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group">
           <button id="query" data-bind="click: query" class="btn btn-primary">Query
-            <span id="spinner" class="spinner-border spinner-border-sm d-none">
+            <span id="spinner" data-bind="visible: busy" class="spinner-border spinner-border-sm">
             </span>
           </button>
         </div>
