rename some table headers

--- a/src/gitlab-tool/gitlab-tool.html
+++ b/src/gitlab-tool/gitlab-tool.html
@@ -42,7 +42,7 @@
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">Name</th>
+              <th scope="col">Project Name</th>
               <th scope="col">Namespace</th>
               <th scope="col">HTTP URL</th>
               <th scope="col">SSH URL</th>
@@ -60,8 +60,8 @@
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">Title</th>
-              <th scope="col">Project</th>
+              <th scope="col">Milestone Title</th>
+              <th scope="col">Project Name</th>
               <th scope="col">State</th>
               <th scope="col">Due Date</th>
               <th scope="col">Start Date</th>
