--- a/src/gitlab-tool/gitlab-tool.html
+++ b/src/gitlab-tool/gitlab-tool.html
@@ -28,16 +28,14 @@
             </span>
           </button>
         </div>
-        <div class="form-group">
-          <div class="btn-group btn-group-toggle" data-toggle="buttons">
-            <label class="btn btn-secondary active">
-              <input type="radio" name="options" id="viewProjects" checked>Projects
-            </label>
-            <label class="btn btn-secondary">
-              <input type="radio" name="options" id="viewMilestones">Milestones
-            </label>
-          </div>
-        </div>
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a id="viewProjects" class="nav-link active" data-bind="click: viewProjects" href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a id="viewMilestones" class="nav-link" data-bind="click: viewMilestones" href="#">Milestones</a>
+          </li>
+        </ul>
         <table id="projects" class="table">
           <thead>
             <tr>
@@ -81,7 +79,6 @@
   </div>
   <script>
     // You can also require other files to run in this process
-    window.$ = window.jQuery = require('jquery')
     require('popper.js')
     require('bootstrap')
     require('./gitlab-tool.js')
