--- a/src/gitlab-tool/gitlab-tool.html
+++ b/src/gitlab-tool/gitlab-tool.html
@@ -36,48 +36,50 @@
             <a id="viewMilestones" class="nav-link" data-bind="click: viewMilestones, css: { 'active': milestonesVisible }" href="#">Milestones</a>
           </li>
         </ul>
-        <table id="projects" class="table" data-bind="css: {'d-none': milestonesVisible}">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Project Name</th>
-              <th scope="col">Namespace</th>
-              <th scope="col">HTTP URL</th>
-              <th scope="col">SSH URL</th>
-            </tr>
-          </thead>
-          <tbody data-bind="foreach: projects">
-            <tr>
-              <td data-bind="text: id"></td>
-              <td data-bind="text: name"></td>
-              <td data-bind="text: namespace.full_path"></td>
-              <td data-bind="text: http_url_to_repo"></td>
-              <td data-bind="text: ssh_url_to_repo"></td>
-            </tr>
-          </tbody>
-        </table>
-        <table id="milestones" class="table" data-bind="css: {'d-none': projectsVisible}">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Milestone Title</th>
-              <th scope="col">Project Name</th>
-              <th scope="col">State</th>
-              <th scope="col">Due Date</th>
-              <th scope="col">Start Date</th>
-            </tr>
-          </thead>
-          <tbody data-bind="foreach: milestones">
-            <tr>
-              <td data-bind="text: id"></td>
-              <td data-bind="text: title"></td>
-              <td data-bind="text: projectName"></td>
-              <td data-bind="text: state"></td>
-              <td data-bind="text: due_date"></td>
-              <td data-bind="text: start_date"></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="table-responsive text-nowrap">
+          <table id="projects" class="table table-borderless table-sm" data-bind="css: {'d-none': milestonesVisible}">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Project Name</th>
+                <th scope="col">Namespace</th>
+                <th scope="col">SSH URL</th>
+                <th scope="col">HTTP URL</th>
+              </tr>
+            </thead>
+            <tbody data-bind="foreach: projects">
+              <tr>
+                <td data-bind="text: id"></td>
+                <td data-bind="text: name"></td>
+                <td data-bind="text: namespace.full_path"></td>
+                <td data-bind="text: ssh_url_to_repo"></td>
+                <td data-bind="text: http_url_to_repo"></td>
+              </tr>
+            </tbody>
+          </table>
+          <table id="milestones" class="table table-borderless table-sm" data-bind="css: {'d-none': projectsVisible}">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Milestone Title</th>
+                <th scope="col">Project Name</th>
+                <th scope="col">State</th>
+                <th scope="col">Due Date</th>
+                <th scope="col">Start Date</th>
+              </tr>
+            </thead>
+            <tbody data-bind="foreach: milestones">
+              <tr>
+                <td data-bind="text: id"></td>
+                <td data-bind="text: title"></td>
+                <td data-bind="text: projectName"></td>
+                <td data-bind="text: state"></td>
+                <td data-bind="text: due_date"></td>
+                <td data-bind="text: start_date"></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
