rename main page

--- a/src/gitlab-tool/main.html
+++ b/src/gitlab-tool/main.html
@@ -87,7 +87,7 @@
     // You can also require other files to run in this process
     require('popper.js')
     require('bootstrap')
-    require('./gitlab-tool.js')
+    require('./main')
   </script>
 </body>
 
