--- a/src/git-tool/main.html
+++ b/src/git-tool/main.html
@@ -51,7 +51,7 @@
       window.$ = window.jQuery = require('jquery')
       require('popper.js')
       require('bootstrap')
-      require('./git-tool.js')
+      require('./main')
     </script>
   </body>
 </html>
