--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm">
-          <p>Open a new instance of a tool</p>
+          <p>Click to open a new instance of a tool</p>
           <a id="git-tool" href="#" class="list-group-item list-group-item-action">Git Tool</a>
           <a id="gitlab-tool" href="#" class="list-group-item list-group-item-action">GitLab Tool</a>
         </div>
