--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     </div>
     <script>
       window.$ = window.jQuery = require('jquery')
-      require('./renderer.js')
+      require('./renderer')
       require('popper.js')
       require('bootstrap')
     </script>
