--- a/src/gitlab-tool/main.html
+++ b/src/gitlab-tool/main.html
@@ -10,11 +10,11 @@
 
 <body>
   <div class="container-fluid">
-    <div class="row border rounded p-1 m-1">
+    <div class="row border rounded m-1">
       <div class="col" data-bind="component: 'settings'">
       </div>
     </div>
-    <div class="row p-1 m-1">
+    <div class="row m-1">
       <div class="col" data-bind="component: 'projects'">
       </div>
       </div>
