--- a/src/gitlab-tool/settings.html
+++ b/src/gitlab-tool/settings.html
@@ -8,7 +8,9 @@
     <input data-bind="value: token" type="password" class="form-control">
     </select>
 </div>
-<button data-bind="click: save" class="btn btn-primary">Save
-    <span data-bind="visible: busy" class="spinner-border spinner-border-sm">
-    </span>
-</button>
+<div class="form-group">
+    <button data-bind="click: save" class="btn btn-primary">Save
+        <span data-bind="visible: busy" class="spinner-border spinner-border-sm">
+        </span>
+    </button>
+</div>
