--- a/src/gitlab-tool/main.html
+++ b/src/gitlab-tool/main.html
@@ -9,16 +9,27 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row border rounded m-1">
-      <div class="col" data-bind="component: 'settings'">
+  <div class="container-fluid m-1">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <span class="navbar-brand">GitLab Tool</span>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#" data-bind="click: showProjects, css: { 'active': component() === 'projects' }">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#" data-bind="click: showSettings, css: { 'active': component() === 'settings' }">Settings</a>
+          </li>
+        </ul>
       </div>
-    </div>
-    <div class="row m-1">
-      <div class="col" data-bind="component: 'projects'">
+    </nav>
+    <div class="row">
+      <div class="col" data-bind="component: component">
       </div>
-      </div>
-    </div>
+    </div>    
   </div>
   <script>
     // You can also require other files to run in this process
