--- a/src/gitlab-tool/main.html
+++ b/src/gitlab-tool/main.html
@@ -18,10 +18,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#" data-bind="click: showProjects, css: { 'active': component() === 'projects' }">Projects</a>
+            <a class="nav-link" href="#" data-bind="click: showComponent.bind($data, 'projects'), css: { 'active': component() === 'projects' }">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#" data-bind="click: showSettings, css: { 'active': component() === 'settings' }">Settings</a>
+            <a class="nav-link active" href="#" data-bind="click: showComponent.bind($data, 'settings'), css: { 'active': component() === 'settings' }">Settings</a>
           </li>
         </ul>
       </div>
