--- a/src/gitlab-tool/main.html
+++ b/src/gitlab-tool/main.html
@@ -33,9 +33,9 @@
   </div>
   <script>
     // You can also require other files to run in this process
-    require('popper.js')
-    require('bootstrap')
-    require('./main')
+    require('popper.js');
+    require('bootstrap');
+    require('./main');
   </script>
 </body>
 
