--- a/src/git-tool/main.html
+++ b/src/git-tool/main.html
@@ -13,15 +13,15 @@
       <div class="row">
         <div class="col-sm-12 col-lg-5">
           <div class="form-group">
-            <label for="folders">Select root folder</label>
+            <label for="rootFolder">Select root folder</label>
             <div class="custom-file">
-              <input id="rootFolder" type="file" class="custom-file-input" webkitdirectory>
-              <label class="custom-file-label" for="rootFolder">Pick root folder</label>
+              <input id="rootFolder" data-bind="event: { change: function() { setRootFolder($element.files[0].path); } }" type="file" class="custom-file-input" webkitdirectory>
+              <label class="custom-file-label" for="rootFolder" data-bind="text: rootFolder">Pick root folder</label>
             </div>
           </div>
           <div class="form-group">
             <label for="folders">Select Git repo(s)</label>
-            <select id="folders" class="form-control" multiple>
+            <select id="folders" data-bind="options: gitFolders, selectedOptions: selectedFolders" class="form-control" multiple="true">
             </select>
           </div>
           <div class="form-group">
@@ -29,8 +29,8 @@
             <textarea id="commands" class="form-control">status</textarea>
           </div>
           <div class="form-group">
-            <button id="run" class="btn btn-primary">Run
-              <span id="spinner" class="spinner-border spinner-border-sm d-none">
+            <button data-bind="click: runCommands" class="btn btn-primary">Run
+              <span data-bind="visible: busy" class="spinner-border spinner-border-sm">
               </span>
             </button>
           </div>
@@ -41,7 +41,7 @@
             <div id="log" class=""></div>
           </div>
           <div class="form-group">
-              <button id="clear" class="btn btn-secondary float-right">Clear</button>
+              <button data-bind="click: clearTerminal" class="btn btn-secondary float-right">Clear</button>
             </div>
           </div>
       </div>
